--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
         }
 
         .logo {
-            font-size: 1.3rem;
+            font-size: 1.5rem;
             font-weight: 700;
+            color: #1a1a1a;
         }
 
-        .logo span {
-            color: #667eea;
+        .logo-pink {
+            color: #ff9eb3;
         }
 
         nav ul {
@@ -53,13 +54,13 @@
         }
 
         nav a:hover {
-            color: #667eea;
+            color: #ff9eb3;
         }
 
         .hero {
             margin-top: 80px;
             padding: 4rem 8%;
-            background: linear-gradient(135deg, #e8edff 0%, #f5f7fa 100%);
+            background: linear-gradient(135deg, #ffe8f0 0%, #fff5f8 100%);
             min-height: 90vh;
             display: flex;
             align-items: center;
@@ -80,7 +81,7 @@
 
         .graduating {
             font-size: 0.95rem;
-            color: #667eea;
+            color: #ff9eb3;
             font-weight: 600;
             margin-bottom: 1rem;
             text-transform: uppercase;
@@ -119,7 +120,7 @@
         .cta-btn {
             display: inline-block;
             padding: 1rem 2rem;
-            background: #667eea;
+            background: #ff9eb3;
             color: white;
             text-decoration: none;
             border-radius: 8px;
@@ -129,19 +130,19 @@
         }
 
         .cta-btn:hover {
-            background: #5568d3;
+            background: #ff85a1;
             transform: translateY(-2px);
-            box-shadow: 0 8px 20px rgba(102, 126, 234, 0.3);
+            box-shadow: 0 8px 20px rgba(255, 158, 179, 0.3);
         }
 
         .cta-btn.secondary {
             background: white;
-            color: #667eea;
-            border: 2px solid #667eea;
+            color: #ff9eb3;
+            border: 2px solid #ff9eb3;
         }
 
         .cta-btn.secondary:hover {
-            background: #667eea;
+            background: #ff9eb3;
             color: white;
         }
 
@@ -198,7 +199,7 @@
         .outcome-value {
             font-size: 3rem;
             font-weight: 700;
-            color: #667eea;
+            color: #ff9eb3;
             margin-bottom: 0.5rem;
         }
 
@@ -217,7 +218,7 @@
             padding: 2.5rem;
             border-radius: 15px;
             margin-bottom: 2rem;
-            border-left: 4px solid #667eea;
+            border-left: 4px solid #ff9eb3;
         }
 
         .experience-header {
@@ -234,7 +235,7 @@
         }
 
         .experience-company {
-            color: #667eea;
+            color: #ff9eb3;
             font-weight: 600;
             margin-bottom: 0.3rem;
         }
@@ -261,7 +262,7 @@
             content: "→";
             position: absolute;
             left: 0;
-            color: #667eea;
+            color: #ff9eb3;
             font-weight: bold;
         }
 
@@ -285,11 +286,11 @@
 
         .project-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            box-shadow: 0 10px 30px rgba(255, 158, 179, 0.2);
         }
 
         .project-card h3 {
-            color: #667eea;
+            color: #ff9eb3;
             margin-bottom: 1rem;
             font-size: 1.5rem;
         }
@@ -307,7 +308,7 @@
         }
 
         .tag {
-            background: #667eea;
+            background: #ff9eb3;
             color: white;
             padding: 0.4rem 1rem;
             border-radius: 20px;
@@ -332,14 +333,45 @@
         }
 
         .skill-category h3 {
-            color: #667eea;
-            margin-bottom: 1rem;
-            font-size: 1.3rem;
+            color: #1a1a1a;
+            margin-bottom: 1.5rem;
+            font-size: 1.5rem;
         }
 
-        .skill-category p {
-            color: #555;
-            line-height: 1.7;
+        .skill-pills {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.8rem;
+        }
+
+        .pill-light {
+            background: #f0f0f0;
+            color: #333;
+            padding: 0.6rem 1.2rem;
+            border-radius: 25px;
+            font-size: 0.9rem;
+            font-weight: 500;
+            transition: all 0.3s;
+        }
+
+        .pill-light:hover {
+            background: #e0e0e0;
+            transform: translateY(-2px);
+        }
+
+        .pill-colored {
+            background: #ff9eb3;
+            color: white;
+            padding: 0.6rem 1.2rem;
+            border-radius: 25px;
+            font-size: 0.9rem;
+            font-weight: 500;
+            transition: all 0.3s;
+        }
+
+        .pill-colored:hover {
+            background: #ff85a1;
+            transform: translateY(-2px);
         }
 
         .contact {
@@ -363,7 +395,7 @@
 
         .social-links a {
             padding: 1rem 2rem;
-            background: #667eea;
+            background: #ff9eb3;
             color: white;
             text-decoration: none;
             border-radius: 8px;
@@ -372,7 +404,7 @@
         }
 
         .social-links a:hover {
-            background: #5568d3;
+            background: #ff85a1;
             transform: translateY(-2px);
         }
 
@@ -428,7 +460,7 @@
 </head>
 <body>
     <nav>
-        <div class="logo"><span>Bhavya</span> Samtani</div>
+        <div class="logo"><span class="logo-pink">Bhavya</span> Samtani</div>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#experience">Experience</a></li>
@@ -458,7 +490,7 @@
             </div>
 
             <div class="hero-right">
-                <img src="https://via.placeholder.com/400x400/667eea/ffffff?text=Your+Photo" alt="Bhavya Samtani" class="profile-image">
+                <img src="https://via.placeholder.com/400x400/ff9eb3/ffffff?text=Your+Photo" alt="Bhavya Samtani" class="profile-image">
             </div>
         </div>
     </section>
@@ -584,23 +616,39 @@
 
     <section class="skills" id="skills">
         <div class="section-container">
-            <h2 class="section-title">Skills & Expertise</h2>
+            <h2 class="section-title">Skills</h2>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h3>Programming & Analytics</h3>
-                    <p>SQL (joins, CTEs, window functions, optimization), Python (Pandas, NumPy, Matplotlib), R, Statistical Analysis</p>
+                    <h3>Tools</h3>
+                    <div class="skill-pills">
+                        <span class="pill-light">SQL</span>
+                        <span class="pill-light">Python</span>
+                        <span class="pill-light">R</span>
+                        <span class="pill-light">Oracle</span>
+                        <span class="pill-light">MySQL</span>
+                        <span class="pill-light">Databricks</span>
+                        <span class="pill-light">Tableau</span>
+                        <span class="pill-light">Power BI</span>
+                        <span class="pill-light">Google Data Studio</span>
+                        <span class="pill-light">Excel</span>
+                        <span class="pill-light">GitHub</span>
+                        <span class="pill-light">Jira</span>
+                        <span class="pill-light">Figma</span>
+                        <span class="pill-light">Miro</span>
+                    </div>
                 </div>
                 <div class="skill-category">
-                    <h3>Data Engineering</h3>
-                    <p>Data Modeling, Oracle, MySQL, ETL/ELT Pipelines, Databricks, Normalized Schemas</p>
-                </div>
-                <div class="skill-category">
-                    <h3>Visualization & BI</h3>
-                    <p>Tableau, Power BI, Google Data Studio, Excel (Power Query, Pivot Tables), Seaborn</p>
-                </div>
-                <div class="skill-category">
-                    <h3>Methods & Tools</h3>
-                    <p>Predictive Modeling, Fraud Detection, Agile/Scrum, GitHub, Jira, Figma, Miro</p>
+                    <h3>Competencies</h3>
+                    <div class="skill-pills">
+                        <span class="pill-colored">Statistical Analysis</span>
+                        <span class="pill-colored">Predictive Modeling</span>
+                        <span class="pill-colored">Data Modeling</span>
+                        <span class="pill-colored">ETL/ELT Pipelines</span>
+                        <span class="pill-colored">Fraud Detection</span>
+                        <span class="pill-colored">Data Analytics</span>
+                        <span class="pill-colored">Agile/Scrum</span>
+                        <span class="pill-colored">KPI Design</span>
+                    </div>
                 </div>
             </div>
         </div>
