--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
             </div>
 
             <div class="hero-right">
-                <img src="profile.jpg" alt="Bhavya Samtani" class="profile-image">
+                <img src="Bhavya.jpg" alt="Bhavya Samtani" class="profile-image">
             </div>
         </div>
     </section>
