--- a/index.html
+++ b/index.html
@@ -117,6 +117,61 @@
             font-size: 0.95rem;
         }
 
+        .linkedin-btn {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.8rem 1.5rem;
+            background: white;
+            color: #333;
+            text-decoration: none;
+            border-radius: 8px;
+            font-weight: 500;
+            transition: all 0.3s;
+            border: 2px solid #e0e0e0;
+            margin: 1.5rem 0;
+        }
+
+        .linkedin-btn:hover {
+            border-color: #ff9eb3;
+            color: #ff9eb3;
+            transform: translateY(-2px);
+        }
+
+        .worked-with {
+            margin: 2rem 0;
+        }
+
+        .worked-label {
+            color: #999;
+            font-size: 0.85rem;
+            font-weight: 600;
+            letter-spacing: 1px;
+            margin-bottom: 1rem;
+        }
+
+        .company-pills {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.8rem;
+        }
+
+        .company-pill {
+            background: white;
+            color: #333;
+            padding: 0.6rem 1.2rem;
+            border-radius: 25px;
+            font-size: 0.9rem;
+            font-weight: 500;
+            border: 2px solid #e0e0e0;
+            transition: all 0.3s;
+        }
+
+        .company-pill:hover {
+            border-color: #ff9eb3;
+            color: #ff9eb3;
+        }
+
         .cta-btn {
             display: inline-block;
             padding: 1rem 2rem;
@@ -483,7 +538,23 @@
                     <div class="meta-item">📊 Data Analytics Focus</div>
                 </div>
 
-                <div>
+                <a href="https://www.linkedin.com/in/bhavya-samtani" target="_blank" class="linkedin-btn">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                    </svg>
+                    View LinkedIn
+                </a>
+
+                <div class="worked-with">
+                    <div class="worked-label">WORKED WITH</div>
+                    <div class="company-pills">
+                        <span class="company-pill">Tata Consultancy Services</span>
+                        <span class="company-pill">Nomura Services Pvt Ltd</span>
+                        <span class="company-pill">SmartStream Technologies</span>
+                    </div>
+                </div>
+
+                <div style="margin-top: 2rem;">
                     <a href="#experience" class="cta-btn">View Experience</a>
                     <a href="mailto:bsamtani20@gmail.com" class="cta-btn secondary">Get in Touch</a>
                 </div>
@@ -656,17 +727,36 @@
 
     <section class="contact" id="contact">
         <div class="section-container">
-            <h2 class="section-title">Let's Connect</h2>
-            <div class="contact-content">
-                <p>I'm always open to discussing data analytics opportunities, collaborations, or just chatting about data!</p>
-                <div class="social-links">
-                    <a href="mailto:bsamtani20@gmail.com">📧 Email Me</a>
-                    <a href="https://www.linkedin.com/in/bhavya-samtani" target="_blank">💼 LinkedIn</a>
-                    <a href="https://github.com/bhavyasamtani" target="_blank">💻 GitHub</a>
+            <div class="contact-hero">
+                <div class="contact-left">
+                    <h2 class="contact-headline">Let's build impactful solutions</h2>
+                    <p class="contact-tagline">I love solving complex data and analytical problems with data-driven execution.</p>
+                    <div class="contact-meta">
+                        <span class="contact-meta-item">📍 Long Beach, California</span>
+                        <span class="contact-meta-item">🎓 Graduating May 2026</span>
+                    </div>
+                </div>
+                <div class="contact-right">
+                    <a href="mailto:bsamtani20@gmail.com" class="contact-email-btn">
+                        ✉️ bsamtani20@gmail.com
+                    </a>
+                    <a href="tel:+15624495612" class="contact-phone">📞 (+1) 562-449-5612</a>
+                    <a href="https://www.linkedin.com/in/bhavya-samtani" target="_blank" class="contact-linkedin">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                        </svg>
+                        LinkedIn
+                    </a>
                 </div>
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="section-container">
+            <p>© 2025 Bhavya Samtani. All rights reserved.</p>
+        </div>
+    </footer>
 
     <script>
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
