--- a/index.html
+++ b/index.html
@@ -576,7 +576,9 @@
             <div class="hero-left">
                 <div class="graduating">Graduating May 2026</div>
                 <h1>Bhavya Samtani</h1>
-                <p class="hero-subtitle">Master's in Information Systems at California State University, Long Beach. I drive data-driven insights at the intersection of analytics, business intelligence, and operations—turning complex data into actionable impact.</p>
+                <p class="hero-subtitle">I’m Bhavya, a Master’s student in Information Systems at California State University, Long Beach, and a data-driven problem solver with 4.5+ years of experience in FinTech and enterprise solutions.
+
+I’ve worked as a Solution Developer, Analyst, and System Engineer, gaining hands-on expertise in PL/SQL, Python, Java, Unix/Linux, and enterprise platforms like TLM, Web Connect, Smart Studio, and Recon Admin. My journey includes designing reconciliation processes for financial institutions, improving auto-matching efficiency, leading migrations from legacy systems, and managing production issues with a strong focus on user collaboration and smooth rollouts.</p>
                 
                 <div class="hero-meta">
                     <div class="meta-item">📍 Long Beach, California</div>
