--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@ I’ve worked as a Solution Developer, Analyst, and System Engineer, gaining han
             </div>
 
             <div class="hero-right">
-                <img src="https://via.placeholder.com/400x400/ff9eb3/ffffff?text=Your+Photo" alt="Bhavya Samtani" class="profile-image">
+                <img src="Bhavya.jpg" alt="Bhavya Samtani" class="profile-image">
             </div>
         </div>
     </section>
