--- a/index.html
+++ b/index.html
@@ -576,9 +576,7 @@
             <div class="hero-left">
                 <div class="graduating">Graduating May 2026</div>
                 <h1>Bhavya Samtani</h1>
-                <p class="hero-subtitle">I’m Bhavya, a Master’s student in Information Systems at California State University, Long Beach, and a data-driven problem solver with 4.5+ years of experience in FinTech and enterprise solutions.
-
-I’ve worked as a Solution Developer, Analyst, and System Engineer, gaining hands-on expertise in PL/SQL, Python, Java, Unix/Linux, and enterprise platforms like TLM, Web Connect, Smart Studio, and Recon Admin. My journey includes designing reconciliation processes for financial institutions, improving auto-matching efficiency, leading migrations from legacy systems, and managing production issues with a strong focus on user collaboration and smooth rollouts.</p>
+                <p class="hero-subtitle">Master's student in Information Systems at CSULB with 4.5+ years in IT and FinTech. Skilled in SQL, Python, Tableau, Power BI, and ETL pipelines. Experienced in building dashboards, predictive models, and analytics solutions that improve data accuracy, automate reporting, and drive business insights.</p>
                 
                 <div class="hero-meta">
                     <div class="meta-item">📍 Long Beach, California</div>
@@ -592,11 +590,6 @@ I’ve worked as a Solution Developer, Analyst, and System Engineer, gaining han
                     </svg>
                     View LinkedIn
                 </a>
-
-                <div style="margin-top: 2rem;">
-                    <a href="#experience" class="cta-btn">View Experience</a>
-                    <a href="mailto:bsamtani20@gmail.com" class="cta-btn secondary">Get in Touch</a>
-                </div>
             </div>
 
             <div class="hero-right">
@@ -803,39 +796,4 @@ I’ve worked as a Solution Developer, Analyst, and System Engineer, gaining han
 
     <footer>
         <div class="section-container">
-            <p>© 2025 Bhavya Samtani. All rights reserved.</p>
-        </div>
-    </footer>
-
-    <script>
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                target.scrollIntoView({ behavior: 'smooth', block: 'start' });
-            });
-        });
-
-        const observerOptions = {
-            threshold: 0.1,
-            rootMargin: '0px 0px -50px 0px'
-        };
-
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.style.opacity = '1';
-                    entry.target.style.transform = 'translateY(0)';
-                }
-            });
-        }, observerOptions);
-
-        document.querySelectorAll('.outcome-card, .experience-item, .project-card, .skill-category').forEach(el => {
-            el.style.opacity = '0';
-            el.style.transform = 'translateY(20px)';
-            el.style.transition = 'all 0.6s ease';
-            observer.observe(el);
-        });
-    </script>
-</body>
-</html>
+            <p>© 2025 Bhavya Samtani. All rights
